k8s/forgeops-console/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forge-console
  labels:
    pod-security.kubernetes.io/enforce: restricted
